# clippy

./: .gitignore  CHANGELOG.md  CLIPBOARD_EMPTY_FIX.md  Cargo.toml  DEBUGGING_NO_LOGS.md  HTTP_SYNC_QUICKSTART.md  INVESTIGATION.md  NATIVE_SYNC.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  flake.nix
config.examples/: README.md  both-modes.toml  macos-server.toml  nixos-client.toml
scripts/: NATIVE_SYNC_QUICKSTART.txt  RESTART_NATIVE_SYNC.md  TEST_BIDIRECTIONAL_SYNC.md  diagnose-connection.sh  diagnose-xclip-issue.sh  native-sync-check.sh  native-sync-macos.plist  native-sync-macos.sh  native-sync-nixos.service  native-sync-nixos.sh  setup-macos-host.sh  setup-nixos-vm.sh  test-clipboard.sh  verify-macos-server.sh
src/: client.rs  config.rs  daemon.rs  http_sync.rs  main.rs  server.rs
src/clipboard/: mod.rs  xclip_fallback.rs
src/storage/: mod.rs  models.rs
src/sync/: protocol.rs
