[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clippy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Clipboard access
arboard = "3.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"

# Encoding
base64 = "0.22"

# Image handling
image = "0.25"

[dev-dependencies]
tempfile = "3.13"
