[package]
name = "clippy"
version = "0.1.0"
edition = "2021"
default-run = "clippy"

[[bin]]
name = "clippy"
path = "src/main.rs"

[[bin]]
name = "test_clipboard"
path = "src/bin/test_clipboard.rs"

[[bin]]
name = "clipboard_server"
path = "src/bin/clipboard_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Clipboard access
arboard = "3.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"

# Encoding
base64 = "0.22"
md5 = "0.7"

# Image handling
image = "0.25"

# HTTP Server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.13"
